<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_a"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/countIncrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/incrementButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/put_one_to_count_state" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transitionButtonToBFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_b"
        android:layout_marginTop="16dp"/>
</LinearLayout>