<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_b"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/countDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="18sp"
        android:layout_marginTop="18dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrementButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_away_one_in_count_state"
        android:layout_marginTop="18dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transitionButtonToAFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_a"
        android:layout_marginTop="18dp"/>



</LinearLayout>